Add BotEmbed utility class and update localization handling; enhance message logging and embed creation